--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/entry-page.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/entry-page.css" />
   </head>
   <body>
     <div class="row height-full">
@@ -23,7 +23,7 @@
         class="left-column flex flex-column height-full justify-center items-center"
       >
         <h1 class="welcoming-title">Forgot Password</h1>
-        <form class="form" autocomplete="off" action="./otp.html">
+        <form class="form" autocomplete="off" action="/otp.html">
           <p class="forgot-password-reminder">
                 Enter your email address and we will send you a link to reset your
                 password.</p>
@@ -39,7 +39,7 @@
         </form>
         <p class="sign-up-prompt">
           Don’t have an account?
-          <a href="./signup.html" class="sign-up-link">Sign up</a>
+          <a href="/signup.html" class="sign-up-link">Sign up</a>
         </p>
       </div>
       <!-- right side -->
