--- a/templates/login.html
+++ b/templates/login.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/entry-page.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/entry-page.css" />
   </head>
   <body>
     <div class="row height-full">
@@ -37,7 +37,7 @@
           />
           
           <p class="forgot-password-prompt">
-            <a href="./forgot-password.html" class="forgot-password-link"
+            <a href="/forgot-password.html" class="forgot-password-link"
             >Forgot password?</a>
           </p>
 
