--- a/templates/success-otp.html
+++ b/templates/success-otp.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/entry-page.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/entry-page.css" />
   </head>
   <body>
     <div class="row height-full">
@@ -49,7 +49,7 @@
         </form>
         <p class="login-prompt">
           Already have an account?
-          <a href="./login.html" class="log-in-link">Log in</a>
+          <a href="/login.html" class="log-in-link">Log in</a>
         </p>
       </div>
       <!-- right side -->
