--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,7 +42,7 @@
               Add task
             </button>
             <button method="post" action="signout" type="submit"
-            class="sign-out-cta">Sign out</button>
+            class="sign-out-cta" id="signout">Sign out</button>
           </div>
         </div>
       </div>
@@ -99,49 +99,10 @@
               <span class="circle pink-background"></span
               ><span class="text">To do</span>
             </h2>
-            <ul class="tasks-list">
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list" id="TaskContainer">
+              
+
+
             </ul>
           </div>
           <div class="list-container blue">
@@ -149,49 +110,10 @@
               <span class="circle blue-background"></span
               ><span class="text">Doing</span>
             </h2>
-            <ul class="tasks-list">
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list" id="TaskContainer">
+              
+
+
             </ul>
           </div>
           <div class="list-container green">
@@ -199,52 +121,16 @@
               <span class="circle green-background"></span
               ><span class="text">Done</span>
             </h2>
-            <ul class="tasks-list">
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <p class="task-name">Design UI</p>
-                  <p class="task-due-date">Due on January 7, 2020</p>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list" id="TaskContainer">
+              
+
+
             </ul>
           </div>
         </div>
+
+
+
         <!-- board view -->
         <div id="board-view" class="board-view hide">
           <!-- list -->
@@ -253,55 +139,10 @@
               <span class="circle pink-background"></span
               ><span class="text">To do</span>
             </h2>
-            <ul class="tasks-list pink">
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list pink" id="TaskContainer">
+              
+
+
             </ul>
           </div>
           <!-- list -->
@@ -310,87 +151,10 @@
               <span class="circle blue-background"></span
               ><span class="text">Doing</span>
             </h2>
-            <ul class="tasks-list blue">
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list blue" id="TaskContainer">
+              
+
+
             </ul>
           </div>
           <!-- list -->
@@ -399,39 +163,10 @@
               <span class="circle green-background"></span
               ><span class="text">Done</span>
             </h2>
-            <ul class="tasks-list green">
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
-              <li class="task-item">
-                <button class="task-button">
-                  <div>
-                    <p class="task-name">Design UI</p>
-                    <p class="task-due-date">Due on January 7, 2020</p>
-                  </div>
-                  <!-- arrow -->
-                  <iconify-icon
-                    icon="material-symbols:arrow-back-ios-rounded"
-                    style="color: black"
-                    width="18"
-                    height="18"
-                    class="arrow-icon"
-                  ></iconify-icon>
-                </button>
-              </li>
+            <ul class="tasks-list green" id="TaskContainer">
+              
+
+
             </ul>
           </div>
         </div>
@@ -474,34 +209,50 @@
             <div>
               <label for="due-date-day" class="secondary-label">Day</label>
               <input
-                type="text"
+                type="number"
                 name="due-date-day"
                 id="due-date-day"
                 class="input white-background"
+                placeholder="DD"
+                min="1"
+                max="31"
                 required
               />
             </div>
             <div>
               <label for="due-date-month" class="secondary-label">Month</label>
               <input
-                type="text"
+                type="number"
                 name="due-date-month"
                 id="due-date-month"
                 class="input white-background"
+                placeholder="MM"
+                min="1"
+                max="12"
                 required
               />
             </div>
             <div>
               <label for="due-date-year" class="secondary-label">Year</label>
               <input
-                type="text"
+                type="number"
                 name="due-date-year"
                 id="due-date-year"
                 class="input white-background"
+                placeholder="YYYY"
+                min="1900"
+                max="2100"
                 required
               />
             </div>
           </div>
+
+          <!-- Hidden input to hold the final combined date -->
+          <input
+            type="hidden"
+            name="combined-due-date"
+            id="combined-due-date"/>
+
           <h2 class="label">Status</h2>
           <div
             id="status-select"
@@ -559,7 +310,7 @@
           </ul>
           <div class="text-center">
             <button
-              type="submit"
+              type="submit" id="addButton"
               class="button regular-button green-background cta-button"
             >
               Add task
@@ -628,6 +379,8 @@
     <!-- import IconifyIcon web component -->
     <script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>
     <!-- js -->
-    <script src="/static/js/main.js"></script>
+    <script src="../static/css/js/main.js"></script>
+    <script src="../static/css/js/dashboard.js"></script>
+    <script src="../static/css/js/login.js"></script>
   </body>
 </html>
