--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
         class="left-column flex flex-column height-full justify-center items-center"
       >
         <h1 class="welcoming-title">Welcome back</h1>
-        <form class="form" autocomplete="off">
+        <form method="post" id="Login" class="form" autocomplete="off">
           <label for="email" class="label">Email</label>
           <input type="email" name="email" id="email" class="input" required />
 
@@ -56,5 +56,6 @@
       <!-- right side -->
       <div class="right-column"></div>
     </div>
+    <script src="../static/css/js/login.js"></script>
   </body>
 </html>
