--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -15,6 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/entry-page.css" />
+    <link rel="icon" href="../static/css/img/logo.png" type="image/png" />
   </head>
   <body>
     <div class="row height-full">
@@ -22,6 +23,7 @@
       <div
         class="left-column flex flex-column height-full justify-center items-center"
       >
+       <img src="../static/css/img/logo.png" alt="Logo" class="logo-forgotpassword" />
         <h1 class="welcoming-title">Forgot Password</h1>
         <form class="form" autocomplete="off" action="/otp.html">
           <p class="forgot-password-reminder">
