--- a/templates/otp.html
+++ b/templates/otp.html
@@ -13,8 +13,9 @@
       rel="stylesheet"
     />
     <!-- main css -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/entry-page.css" />
+    <link rel="stylesheet" href="../static/css/main.css" />
+    <link rel="stylesheet" href="../static/css/entry-page.css" />
+    <link rel="icon" href="../static/css/img/logo.png" type="image/png" />
   </head>
   <body>
     <div class="row height-full">
@@ -22,6 +23,7 @@
       <div
         class="left-column flex flex-column height-full justify-center items-center"
       >
+        <img src="../static/css/img/logo.png" alt="Logo" class="logo-otp" />
         <h1 class="welcoming-title">Your OTP has been sent!</h1>
         <form class="form" autocomplete="off" action="./success-otp.html">
           <p class="forgot-password-reminder"> 
