--- a/static/css/entry-page.css
+++ b/static/css/entry-page.css
@@ -33,6 +33,37 @@
     font-weight: 600;
     text-decoration: underline;
   }
+
+  .logo-login {
+    width: 150px;
+    height: 150px;
+    margin: 0 auto;
+  }
+
+  .logo-signup {
+    width: 170px;
+    height: 170px;
+    margin: 0 auto;
+  }
+
+  .logo-forgotpassword {
+    width: 170px;
+    height: 170px;
+    margin: 0 auto;
+  }
+
+  .logo-otp {
+    width: 170px;
+    height: 170px;
+    margin: 0 auto;
+  }
+
+  .logo-success-otp {
+    width: 170px;
+    height: 170px;
+    margin: 0 auto;
+  }
+  
   
   /* media queries */
   @media (min-width: 768px) {
