--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/entry-page.css" />
+    <link rel="icon" href="../static/css/img/logo.png" type="image/png" />
   </head>
   <body>
     <div class="row height-full">
@@ -22,6 +23,7 @@
       <div
         class="left-column flex flex-column height-full justify-center items-center"
       >
+        <img src="../static/css/img/logo.png" alt="Logo" class="logo-login" />
         <h1 class="welcoming-title">Welcome back</h1>
         <form method="post" id="Login" class="form" autocomplete="off">
           <label for="email" class="label">Email</label>
