--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,6 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/entry-page.css" />
+    <link rel="icon" href="../static/css/img/logo.png" type="image/png" />
   </head>
   <body>
     <div class="row height-full">
@@ -22,12 +23,9 @@
       <div
         class="left-column flex flex-column height-full justify-center items-center"
       >
+        <img src="../static/css/img/logo.png" alt="Logo" class="logo-signup" />
         <h1 class="welcoming-title">Create Your Account and Join Us!</h1>
         <form method="post" id="Account" class="form" autocomplete="off">
-          <p class="signup-reminder">
-            Sign up now to keep your tasks 
-            organized and effortlessly manage everything in one place!
-          </p>
           <label for="email" class="label">Email</label>
           <input type="email" name="email" id="email" class="input" required />
 
