--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -322,6 +322,10 @@ body.overflow-hidden {
     height: 100px; /* Adjust the height as needed */
     margin-right: 10px; /* Space between logo and title */
   }
+
+  .task-due-date {
+    font-weight: bold;
+  }
   
   /* media queries */
   @media (min-width: 768px) {
