--- a/templates/success-otp.html
+++ b/templates/success-otp.html
@@ -15,7 +15,7 @@
     <!-- main css -->
     <link rel="stylesheet" href="../static/css/main.css" />
     <link rel="stylesheet" href="../static/css/entry-page.css" />
-    <link rel="icon" href="../static/css/img/logo.png" type="image/png/>
+    <link rel="icon" href="../static/css/img/logo.png" type="image/png"/>
   </head>
   <body>
     <div class="row height-full">
@@ -62,6 +62,7 @@
       <!-- right side -->
       <div class="right-column"></div>
     </div>
+    </body>
     <script>
       function validatePasswords() {
         const password = document.getElementById('password').value;
@@ -83,5 +84,4 @@
         }
       }
     </script>
-  </body>
 </html>
